--- a/relatorio.html
+++ b/relatorio.html
@@ -66,7 +66,9 @@
         <p class="texto-justificado"> 
             Este trabalho teve como objetivo a implementação de um sistema de fila de prioridades
             para um "pronto-socorro", utilizando o Tipo Abstrato de Dados Heap. Também foram usados os 
-            algoritmos de ordenação HeapSort, QuickSort e SelectSort.
+            algoritmos de ordenação HeapSort, QuickSort e SelectSort. O trabalho foi feito em conjunto 
+            com reuniões presenciais e online para a discussão de qual lógica seguir, além disso, também
+            fizemos um repositório no github, onde atualizamos cada passo da implementação.
 
         </p>
 
@@ -75,7 +77,8 @@
             O Heap foi implementado em um vetor, seguindo o modelo visto em sala de aula.
             O principal diferencial em realção a estrutura vista em sala de aula, foi o uso de ponteiros,
             isso deixou o trabalho um pouco mais complexo mas foi interessante unir os conhecimentos das matérias de 
-            Alg II e Prog I.
+            Alg II e Prog I. Sentimos dificuldades nas funções AlteraHeap e InsereHeap, pois além do uso de ponteiros,
+            foi difícil implementar no contexto do Pronto Socorro.
             As principais operações implementadas foram:
         </p class="texto-justificado">
         <ul>
@@ -92,8 +95,11 @@
         </ul>
         
         <h3>Implementação dos Algoritmos de Ordenação</h3>
-        <p>
-            Além do HeapSort, implementamos o QuickSort e o SelectSort para fins de comparação.
+        <p class="texto-justificado">
+            Além do HeapSort, foi realizada a implementação dos algoritmos QuickSort e SelectSort para comparar os números de comparação e trocas realizados por cada algoritmo.
+            É interessante fazer essa comparação para podermos ter a prova prática de que cada algoritmo é executado de uma forma diferente, e que existem sim vantagens na escolha 
+            de qual algoritmo usar.
+            
         </p>
         <ul>
             <li><strong>SelectSort:</strong> [Breve descrição da implementação e como as contagens foram feitas].</li>
